--- a/index.html
+++ b/index.html
@@ -15,36 +15,32 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Custom CSS -->
-  <title>Portfolio website complete</title>
+  <title>Portfolio</title>
 </head>
 
 <body>
-  <!--===== HEADER =====-->
-  <header class="l-header">
-    <nav class="nav bd-grid">
-      <div>
-        <a href="" class="nav__logo">A.B²</a>
-      </div>
+ <!-- ===== HEADER / NAVBAR ===== -->
+ <header class="l-header">
+  <nav class="nav bd-grid" id="navbar">
+    <a href="#" class="nav__logo">A.B²</a>
 
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <a class="nav__item"><a href="#home" class="nav__link active-link">Home</a>
-          <a class="nav__item"><a href="#about" class="nav__link">About</a>
-          <a class="nav__item"><a href="#Education" class="nav__link">Education</a>
-          <a class="nav__item"><a href="#skills" class="nav__link">Skills</a>
-          <a  class="nav__item"><a href="#work" class="nav__link">Work</a>
-          <a class="nav__item"><a href="#Certification" class="nav__link">Certification</a>
-          <a class="nav__item"><a href="#contact" class="nav__link">Contact</a>
-        </ul>
-      </div>
+    <div class="nav__menu" id="nav-menu">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
+        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+        <li class="nav__item"><a href="#education" class="nav__link">Education</a></li>
+        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+        <li class="nav__item"><a href="#certification" class="nav__link">Certification</a></li>
+        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+      </ul>
+    </div>
 
-      <div class="nav__toggle" id="nav-toggle">
-        <i class='bx bx-menu'></i>
-      </div>
-    </nav>
-  </header>
-
-  <main class="l-main">
+    <div class="nav__toggle" id="nav-toggle">
+      <i class="bx bx-menu"></i>
+    </div>
+  </nav>
+</header>
     <!--===== HOME =====-->
     <section class="home bd-grid" id="home">
       <div class="home__data">
@@ -82,7 +78,7 @@
 
       <div class="about__container bd-grid">
         <div class="about__img">
-          <img src="assets/img/Akshay.jpg" alt="">
+          <img src="assets/img/cod.png" alt="">
         </div>
 
         <div>
@@ -100,7 +96,7 @@
 
     </section>
 
-    <section class="Education section " id="Education">
+    <section class="education section " id="education">
       <h2 class="section-title">Education</h2>
 
       <div _ngcontent-serverapp-c15="" class="container cc-education">
@@ -117,7 +113,7 @@
             <div _ngcontent-serverapp-c15="" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500"
               class="col-md-9 aos-init aos-animate">
               <div _ngcontent-serverapp-c15="" class="card-body">
-                <div _ngcontent-serverapp-c15="" class="h5">Bachelor of Engineering (Information Technology )
+                <div _ngcontent-serverapp-c15="" class="h5">Bachelor of Engineering (Info. Tech.)
                 </div>
                 <h4 _ngcontent-serverapp-c15="" class="category">Konkan Gyanpeeth College of Engineering, Raigad </h4>
                 <ul _ngcontent-serverapp-c15="">
@@ -137,7 +133,7 @@
             <div _ngcontent-serverapp-c15="" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500"
               class="col-md-3 bg-primary aos-init">
               <div _ngcontent-serverapp-c15="" class="card-body cc-education-header">
-                <p _ngcontent-serverapp-c15="">2018 - 2021</p>
+                <p _ngcontent-serverapp-c15="">2019 - 2021</p>
                 <div _ngcontent-serverapp-c15="" class="h5">Diploma</div>
               </div>
             </div>
@@ -146,10 +142,10 @@
               <div _ngcontent-serverapp-c15="" class="card-body">
                 <div _ngcontent-serverapp-c15="" class="h5">Diploma</div>
                 <h4 _ngcontent-serverapp-c15="" class="category">Fabtech College of Engineering, Sangola</h4>
-                <ul _ngcontent-serverapp-c15="">
-                  <li _ngcontent-serverapp-c15="">Affiliated with Maharashtra State Board of Technical Education (MSBTE), Pune.</li>
+                <ul ngcontent-serverapp-c15="">
+                  <li ngcontent-serverapp-c15="">Affiliated with Maharashtra State Board of Technical Education (MSBTE), Pune.</li>
             
-                  <li _ngcontent-serverapp-c15=""> Completed my Diploma with<b _ngcontent-serverapp-c15=""> 81%</b>.
+                  <li ngcontent-serverapp-c15=""> Completed my Diploma with<b ngcontent-serverapp-c15=""> 81%</b>.
                   </li>
                 </ul>
               </div>
@@ -162,7 +158,7 @@
             <div _ngcontent-serverapp-c15="" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500"
               class="col-md-3 bg-primary aos-init">
               <div _ngcontent-serverapp-c15="" class="card-body cc-education-header">
-                <p _ngcontent-serverapp-c15="">2016 - 2018</p>
+                <p _ngcontent-serverapp-c15="">2017 - 2018</p>
                 <div _ngcontent-serverapp-c15="" class="h5">Secondary School</div>
               </div>
             </div>
@@ -398,7 +394,7 @@
 
 
     <!-- Certification Section -->
-    <section id="Certification" class="py-5">
+    <section id="certification" class="py-5">
       <h2 class="section-title">Certification</h2>
       <div class="container">
         <h2 class="text-center mb-4"></h2>
@@ -473,12 +469,12 @@
           <!-- certificate 5 -->
           <div class="col-md-4 mb-4">
             <div class="card h-100 shadow">
-              <img src="/assets/img/forage.png" class="card-img-top" alt="Web App Screenshot">
+              <img src="/assets/img/fullstack_cert.jpg" class="card-img-top" alt="Web App Screenshot">
               <div class="card-body">
-                <h5 class="card-title">AWS Solutions Architecture Virtual Program</h5>
-                <span class="certifications__issuer">Forage (in partnership with AWS)</span>
+                <h5 class="card-title"> Full-Stack Web Development Bootcamp</h5>
+                <span class="certifications__issuer">Udemy (Instructor: Dr. Angela Yu)</span>
                 <div class="d-flex justify-content-between align-items-center">
-                  <span class="certifications__date">Issued Jun 2023</span>
+                  <span class="certifications__date">Issued Jun 2025</span>
                 </div>
               </div>
             </div>
